k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inspekt
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - pgadmin.deepmush.io
    - mongo-express.deepmush.io
    - backend.deepmush.io
    - kibana.deepmush.io
    - grafana.deepmush.io
    secretName: deepmush.io-inspekt-tls
  rules:
  - host: pgadmin.deepmush.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin
            port:
              number: 80
  - host: mongo-express.deepmush.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express
            port:
              number: 8081
  - host: backend.deepmush.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000
  - host: kibana.deepmush.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elk
            port:
              number: 5601
  - host: grafana.deepmush.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
